# ruboy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/: publish.yaml
.github/workflows/: publish.yaml
boot/: sgb.sym  stadium2.sym
ruboy/: Cargo.toml  README.md
ruboy/src/: args.rs  main.rs  video.rs
ruboy/src/input/: keyboard.rs  mod.rs
ruboy/src/menu/: audio.rs  debugger.rs  mod.rs  rom.rs  save.rs  window.rs
ruboy_binutils/: Cargo.toml  README.md
ruboy_binutils/src/: lib.rs
ruboy_binutils/src/cli/: dasm.rs  mod.rs
ruboy_lib/: Cargo.toml  README.md
ruboy_lib/boot/: agb0.sym  cgb.sym  cgb0.sym  dmg0.sym  mgb.sym
ruboy_lib/src/: boot.rs  extern_traits.rs  lib.rs
ruboy_lib/src/cpu/: mod.rs  nums.rs  registers.rs  timer.rs
ruboy_lib/src/cpu/instructions/: mod.rs
ruboy_lib/src/input/: mod.rs
ruboy_lib/src/isa/: cycles.rs  decoder.rs  display.rs  len.rs  mod.rs  testutils.rs
ruboy_lib/src/isa/display/: immediate.rs  mod.rs  reg.rs
ruboy_lib/src/isa/display/operand/: mod.rs  optype.rs
ruboy_lib/src/memcontroller/: allocator.rs  dma.rs  interrupts.rs  io.rs  mod.rs
ruboy_lib/src/ppu/: fetcher.rs  inlinequeue.rs  mod.rs  objectdata.rs  palette.rs  tile.rs  tilemap.rs
ruboy_lib/src/rom/: controller.rs  licensee.rs  meta.rs  mod.rs
ruboy_lib/src/rom/controller/: mbc1.rs  mod.rs  nonbanking.rs
ruboy_proc_macro/: Cargo.toml  README.md
src/: lib.rs
src/cpu/: instructions.rs  mod.rs  registers.rs
src/isa/: decoder.rs  mod.rs
src/memcontroller/: mod.rs
