[workspace]
resolver = "2"
members = [
    "ruboy",
    "ruboy_lib",
    "ruboy_binutils"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/cpr_gameboy"
repository = "https://github.com/cloone8/cpr_gameboy"
license = "MPL-2.0"
keywords = ["gameboy", "emulation", "game", "library"]
categories = ["emulators"]

[workspace.dependencies]
ruboy_lib = { path = "ruboy_lib", version = "0.1.0" }
static_assertions = "1.1.0"
cfg-if = "1.0.0"
log = "0.4.21"
simplelog = "0.12.2"
thiserror = "1.0.59"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.83"
colored = "2.1.0"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"

[profile.dev]
opt-level = 1
