[workspace]
resolver = "2"
members = ["ruboy", "ruboy_lib", "ruboy_binutils", "ruboy_proc_macro"]

[workspace.package]
version = "0.1.5"
edition = "2021"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/cpr_gameboy"
repository = "https://github.com/cloone8/cpr_gameboy"
license = "MPL-2.0"
keywords = ["gameboy", "emulation", "game", "library"]
categories = ["emulators"]
rust-version = "1.79.0"

[workspace.dependencies]
ruboy_lib = { path = "ruboy_lib", version = "0.1.5" }
ruboy_proc_macro = { path = "ruboy_proc_macro", version = "0.1.5" }
static_assertions = "1.1.0"
cfg-if = "1.0.0"
log = "0.4.21"
simplelog = "0.12.2"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
colored = "2.1.0"
unicode-width = "0.1.13"
eframe = "0.27.2"
quote = "1.0.36"
syn = "2.0.66"
spin_sleep = "1.2.0"
num = "0.4.3"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release]
lto = true
codegen-units = 1
panic = "unwind"

[profile.dev]
opt-level = 1
