[package]
name = "ruboy"
description = "A gameboy emulator for desktop, based on ruboy_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ruboy_lib.workspace = true
log = { workspace = true, features = ["release_max_level_info"] }
simplelog.workspace = true
clap.workspace = true
anyhow.workspace = true
eframe.workspace = true
