[package]
name = "ruboy_binutils"
description = "A collection of utilities for working with Gameboy binaries, based on ruboy_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruboy_lib.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
unicode-width.workspace = true
